--- a/src/Suave.Swagger/Suave.Swagger.fsproj
+++ b/src/Suave.Swagger/Suave.Swagger.fsproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="FSharp.Quotations.Evaluator" Version="1.0.7" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="System.IO.Compression" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common.fs" />
